Resolves table redesign bugs from appbuilder-1.3 (#7375)
* bug fixed table redesign

* removed unwanted horizontal margin when focused-within state applied on column header

* horizontal scroll was always active due to transform translateX property of resizer element, made it uneffective for last column header

* bug fixed not able to delete column from table inspector

* removed console and display records independent of whether enable pagination is toggled On or off

* changed Code connected text to Use dynamic column

--- a/frontend/src/_styles/table-component.scss
+++ b/frontend/src/_styles/table-component.scss
@@ -340,8 +340,7 @@
     }
   }
 
-  .th,
-  .td {
+  .th{
     .resizer {
       display: inline-block;
       height: 100%;
@@ -353,6 +352,11 @@
       touch-action: none;
       width: 30px;
       cursor: ew-resize !important;
+    }
+    &:last-child{
+      .resizer{
+        transform: translateX(0%);
+      }
     }
   }
 }
@@ -525,7 +529,7 @@
         background: var(--slate4, #ECEEF0) !important;
         box-shadow: 0px 0px 0px 4px #DFE3E6 !important;
         z-index: 999;
-        margin: 4px;
+        margin: 4px 0;
       }
       div:focus-visible{
         outline: 0 !important;
